Files from CRAB added

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,18 @@
 *.root
 *_cfg.py
 *.pyc
+*GS/config/crab.log
+*GS/crab_projects/crab_GS_Jpsi_Dzero_DPS_13TeV_23-07-2025/.requestcache
+*GS/crab_projects/crab_GS_Jpsi_Dzero_DPS_13TeV_23-07-2025/crab.log
+*GS/crab_projects/crab_GS_Jpsi_Dzero_DPS_13TeV_23-07-2025/inputs/6582fe27-164a-497b-98f4-970ca160edf3default.tgz
+*GS/crab_projects/crab_GS_Jpsi_Dzero_DPS_13TeV_23-07-2025/inputs/PSet.pkl
+*GS/crab_projects/crab_GS_Jpsi_Dzero_DPS_13TeV_23-07-2025/inputs/PSet.py
+*GS/crab_projects/crab_GS_Jpsi_Dzero_DPS_13TeV_23-07-2025/inputs/PSetDump.py
+*GS/crab_projects/crab_GS_Jpsi_Dzero_DPS_13TeV_23-07-2025/inputs/debugFiles.tgz
+GS/crab_projects/*
+GS/__pycache__/*
+GS/config/*.py
+GS/crab.log
+GS/crab_config_GS_Jpsi_Dzero_DPS_13TeV.py
+GS/crab_config_GS_Jpsi_Dzero_DPS_13TeV_cfg.p.py
+Configuration/GenProduction/python/__pycache__/Jpsi_Dplus_DPS_13TeV_cfi.cpython-39.pyc
