code for obtaining cross-sections added

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ GS/crab.log
 GS/crab_config_GS_Jpsi_Dzero_DPS_13TeV.py
 GS/crab_config_GS_Jpsi_Dzero_DPS_13TeV_cfg.p.py
 Configuration/GenProduction/python/__pycache__/Jpsi_Dplus_DPS_13TeV_cfi.cpython-39.pyc
+PartDrawer/test.txt
